fix bottom whitespace

--- a/source/sass-bem/components/_c-brand.scss
+++ b/source/sass-bem/components/_c-brand.scss
@@ -7,4 +7,6 @@ img.c-brand {
 
 .c-brand svg {
     width: 100%;
+    height: auto;
+    display: block;
 }
